tentei arrumar, não funcionou e eu vou pedir ajudar ao fabrício

--- a/Nova pasta (3)/imagemzinha.html
+++ b/Nova pasta (3)/imagemzinha.html
@@ -8,10 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img img srcset="img/rosto.jpeg 900w, 
-                    img/sem_rosto.jpeg 300w" 
-        src="img/rosto.jpeg"
-        sizes="(max-width: 900px) 600px, 900px"  
-        alt="rosto">
+    <img img srcset="img/sem_rosto.jpeg 200w, img/rosto.jpeg 500w" 
+    sizes="(max-width: 600px) 300px, 500px"  alt="rosto">
 </body>
 </html>
